--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@11labs/client": "^0.0.4",
     "@fastify/formbody": "^8.0.1",
+    "@fastify/static": "^8.2.0",
     "@fastify/websocket": "^11.0.1",
     "@types/node": "^18.0.6",
     "axios": "^1.7.9",
